--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://emacson.github.io/food-finder",
+  "homepage": "https://emacson.github.io/food-finder/",
   "name": "food-finder",
   "version": "0.1.0",
   "private": true,
